# dynip-email

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LETSENCRYPT_SETUP.md  PLAN.md  PORTS_CONFIGURATION.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  env.example  nginx.conf  test_email.py  test_password_protection.sh  test_smtp.sh
.github/workflows/: docker-build.yml  tests.yml
docs/: BACKEND_DOMAIN_NORMALIZATION.md  CONFIGURATION.md  DOCKER_DEPLOYMENT.md  EMAIL_RETENTION.md  IMPLEMENTATION_SUMMARY.md  MAILBOX_PASSWORD_PROTECTION.md  MCP_INTEGRATION.md  MCP_TESTING.md  SEARCH.md  SSL_IMPLEMENTATION_SUMMARY.md  SYSTEMD_SERVICE.md  WEBHOOKS.md  WEBHOOK_DEBUGGING.md  WEBSOCKET_DELETION_NOTIFICATIONS.md
scripts/: build-docker.sh  dynip-email.service  install-service.sh  migrate_fts.sql  test_email.py  webhook_server.py
src/: config.rs  integration_tests.rs  main.rs
src/api/: admin.rs  handlers.rs  mod.rs  websocket.rs
src/auth/: mod.rs
src/dkim/: mod.rs
src/frontend/static/: app.js  index.html  style.css
src/imap/: mod.rs
src/mcp/: mod.rs
src/outbound/: mod.rs
src/rate_limit/: mod.rs
src/smtp/: mod.rs  parser.rs
src/storage/: fts.rs  mod.rs  models.rs  sqlite.rs
src/webhooks/: mod.rs
static/: app.js  index.html  style.css
