[package]
name = "dynip-email"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Email handling
mailin-embedded = "0.8"
mail-parser = "0.9"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Configuration
dotenvy = "0.15"

# SSL/TLS
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"
hyper = "1.0"
tower = { version = "0.4", features = ["util"] }
